--- a/gcdeep.html
+++ b/gcdeep.html
@@ -232,24 +232,32 @@
         </div>
 
         <div id="xuweinuclear" class="section">
-            <h2>连云港中核徐圩核电站土方运输</h2>
+    <h2>连云港中核徐圩核电站土方运输</h2>
+    <ul>
+        <li><strong>项目概述</strong>：运输土方</li>
+        <li><strong>车辆要求</strong>：
             <ul>
-                <li><strong>项目概述</strong>：运输土方</li>
-                <li><strong>车辆要求</strong>：
-                    <ul>
-                        <li>规格：8.2m 至 8.6m 箱高 1.8m-2m</li>
-                        <li>净重：≤ 80 吨</li>
-                    </ul>
+                <li>规格：8.2m 至 8.6m，箱高 1.8m-2m</li>
+                <li>净重：≤ 80 吨</li>
+            </ul>
+        </li>
+        <li><strong>运输价格（两种模式）</strong>：
+            <ul>
+                <li>距离：40公里 ± 3 公里</li>
+                <li><strong>方式一</strong>：<br>
+                    - 价格：6.5 元/吨<br>
+                    - 条件：<span style="color:#e74c3c;">甲方管油管住，不管吃</span>
                 </li>
-                <li><strong>运输价格</strong>：
-                    <ul>
-                        <li>价格：12元/吨（45公里±3）</li>
-                        <li>结算：日结</li>
-                        <li>作业：24 小时</li>
-                    </ul>
+                <li><strong>方式二</strong>：<br>
+                    - 价格：12 元/吨<br>
+                    - 条件：<span style="color:#e74c3c;">吃住油自理</span>
                 </li>
             </ul>
-        </div>
+        </li>
+        <li><strong>结算方式</strong>：日结</li>
+        <li><strong>作业时间</strong>：24 小时作业</li>
+    </ul>
+</div>
 
         <div class="contact">
             <strong>联系方式</strong>：郭 13705366364（微信同号）
