--- a/gcdeep.html
+++ b/gcdeep.html
@@ -303,12 +303,15 @@ button.active {
 <div class="contact">
   <strong>联系方式</strong>：郭 13705366364（微信同号）
 </div>
-<div style="text-align:center; margin-top: 20px;">
-  <a href="/gc.apk" download>
+<div style="display: flex; justify-content: center; gap: 16px; flex-wrap: wrap; margin-top: 20px;">
+  <a href="/transport.apk" download>
     <button style="background: linear-gradient(145deg, #10b981, #059669); color: white;">
       📥 下载公示APP
     </button>
   </a>
+  <button onclick="location.reload()" style="background: linear-gradient(145deg, #60a5fa, #3b82f6); color: white;">
+    🔄 刷新页面
+  </button>
 </div>
 </div>
 
